--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- inject:head:html -->
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Agata Patel - Architekt wnętrz</title>
 <link rel="stylesheet" href="../static/main.css" />
