--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -20,7 +20,7 @@
 					<img class="portfolio-img" data-frz-src="../static/img/2.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
-            <div class="col-md-6  col-sm-12 portfolio-col">
+            <div class="col-md-6 col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
 					<img class="portfolio-img" data-frz-src="../static/img/3.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
@@ -39,7 +39,7 @@
 		<div class="hero-image hero-image-1 portfolio-row-4">
 			<img class="bg-placeholder" src="../static/img/4.jpg" alt="">
 		</div>
-		<div class="row portfolio-row-5">
+		<div class="portfolio-row-5">
 			<div class="portfolio-row-5__wrap">
 				<div class="portfolio-row-5__bg-wrap">
 					<div id="portfolio-row-5__first-image" class="portfolio-row-5__first-image">
@@ -62,7 +62,7 @@
 		<div class="hero-image hero-image-2 portfolio-row-7">
 			<img class="bg-placeholder" src="../static/img/7.jpg" alt="">
 		</div>
-		<div class="row portfolio-row portfolio-row-8 quote-row">
+		<div class="row portfolio-row portfolio-row-8">
             <div class="col-md-12 quote">
 				<div class="quote-wall">
 					<div class="quote-text quote-text__first-smaller">
