CV page for small screens

--- a/src/cv.html
+++ b/src/cv.html
@@ -11,71 +11,63 @@
 		<div class="cv-container">
 			<div class="cv-container--inner">
 				<div class="cv-header">
-					<div class="row cv__section">
-						<div class="col-xs-4">
-							<div class="row">
-								<img src="../static/img/agata_patel.jpg" alt="" class="img-circle my_photo"> <br />
+					<div class="row">
+						<div class="col-md-4 col-xs-12">
+							<div class="row cv__my-photo-wrap">
+								<img src="../static/img/agata_patel.jpg" alt="" class="cv__my-photo">
 							</div>
 						</div>
-						<div class="col-xs-8 shift-right">
-							<div class="row">
-								<div id="name">Agata Patel</div>
+						<div class="col-md-8 col-xs-12 cv-header__details">
+							<div>
+								<div class="my-name">Agata Patel</div>
 							</div>
-							<div class="row">
+							<div>
+								<span>Architekt Wnętrz</span>
+								<span class="cv__icon glyphicon glyphicon-heart"></span>
+							</div>
+							<div>
 								<span style="font-weight:bold">portfolio: agatapatel.com</span>
-								<span class="glyphicon glyphicon-fire"></span>
+								<span class="cv__icon glyphicon glyphicon-fire"></span>
 							</div>
-							<div class="row">
+							<div>
 								patelagata@gmail.com
-								<span class="glyphicon glyphicon-envelope"></span>
+								<span class="cv__icon glyphicon glyphicon-envelope"></span>
 							</div>
-							<div class="row">
-								ur. 28.09.1990
-								<span class="glyphicon glyphicon-gift"></span>
-							</div>
-							<div class="row">
-								570 686 169
-								<span class="glyphicon glyphicon-phone"></span>
-							</div>
-							<div class="row">
-								47-224 Kędzierzyn - Koźle
-								<span class="glyphicon glyphicon-map-marker"></span>
+							<div>
+								Kędzierzyn - Koźle
+								<span class="cv__icon glyphicon glyphicon-map-marker"></span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="cv__section">
-					<div class="page-header">DOŚWIADCZENIE</div>
-					<div class="row">
-						<div class="col-xs-5 date">
-							01.2016 — obecnie
-						</div>
-						<div class="col-xs-7 r">
-							<div class="row company-name">Asberg Meble, Krapkowice</div>
-							<div class="row company-position">Projektant</div>
-							<div class="row">
-									Projektowanie wnętrz oraz mebli na wymiar. Konsultacje z klientem, wymiarowanie projektowanych pomieszczeń, nadzór i monitorowanie pracy stolarni. Sporządzanie dokumentacji technicznej. Projektowanie nowych ekspozycji w salonach sprzedaży i wdrażanie nowych produktów do oferty firmy. 
+					<div class="cv__section-title">DOŚWIADCZENIE</div>
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">01.2016 — obecnie</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Asberg Meble, Krapkowice</div>
+							<div class="company-position">Projektant</div>
+							<div class="">
+								Projektowanie wnętrz oraz mebli na wymiar. Konsultacje z klientem, wymiarowanie projektowanych pomieszczeń, nadzór i monitorowanie pracy stolarni. Sporządzanie dokumentacji technicznej. Projektowanie nowych ekspozycji w salonach sprzedaży i wdrażanie nowych produktów do oferty firmy. 
 							</div>
 						</div>
 					</div>
-					<div class="row next-item">
-						<div class="col-xs-5 date">
-							07.2014 — 03.2015
-						</div>
-						<div class="col-xs-7 r">
-							<div class="row company-name">Black Red White, Kędzierzyn-Koźle</div>
-							<div class="row company-position">Projektant - Sprzedawca</div>
-							<div class="row">
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">07.2014 — 03.2015</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Black Red White, Kędzierzyn-Koźle</div>
+							<div class="company-position">Projektant - Sprzedawca</div>
+							<div class="">
 								Projektowanie kuchni, konsultacje z klientem, wymiarowanie projektowanych pomieszczeń, nadzór i monitorowanie pracy ekipy montażowej.
 							</div>
 						</div>
 					</div>
-					<div class="row next-item">
-						<div class="col-xs-5 date">07.2012 — 09.2012</div>
-						<div class="col-xs-7 r">
-							<div class="row company-name">Architects Coordinates, Bangalore, Indie</div>
-							<div class="row company-position">Praktyki studenckie połączone z pracą na stanowisku Asystent Projektanta Głównego</div>
-							<div class="row">
+					<div class="row cv__item-module next-item">
+						<div class="col-md-5 col-xs-12 date">07.2012 — 09.2012</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Architects Coordinates, Bangalore, Indie</div>
+							<div class="company-position">Praktyki studenckie połączone z pracą na stanowisku Asystent Projektanta Głównego</div>
+							<div class="">
 								Sporządzanie dokumentacji technicznej dla wykonawcy projektu. Pomiar projektowanych pomieszczeń. Wybór materiałów. Konsultacje z klientem. 
 								<br /><br />
 								<span class="project-details">
@@ -89,65 +81,55 @@
 				</div>
 
 				<div class="cv__section">
-					<div class="page-header page-header-2">WYKSZTAŁCENIE</div>
-					<div class="row ">
-						<div class="col-xs-5 date">10.2010 — 06.2013</div>
-						<div class="col-xs-7 r">
-							<div class="row company-name">Architektura Wnętrz, Projektowanie Wnętrz</div>
-							<div class="row company-position">Uniwersytet Technologiczno-Humanistyczny im. Kazimierza Pułaskiego w Radomiu</div>
+					<div class="cv__section-title cv__section-title-2">WYKSZTAŁCENIE</div>
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">10.2010 — 06.2013</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Architektura Wnętrz, Projektowanie Wnętrz</div>
+							<div class="company-position">Uniwersytet Technologiczno-Humanistyczny im. Kazimierza Pułaskiego w Radomiu</div>
 						</div>
 					</div>
-					<div class="row next-item">
-						<div class="col-xs-5 date">09.2006 — 04.2010</div>
-						<div class="col-xs-7 r">
-							<div class="row company-name">Snycerstwo, Meblarstwo</div>
-							<div class="row company-position">Liceum Plastyczne im. Bernardo Morando w Zamościu</div>
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">09.2006 — 04.2010</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Snycerstwo, Meblarstwo</div>
+							<div class="company-position">Liceum Plastyczne im. Bernardo Morando w Zamościu</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="page-header cv__section page-header-3"></div>
-				<div class="row cv__section">
-					<div class="col-xs-4">
-						<div class="">
-							<div class="row">
-								<div class="center-icon-container">
-									<span class="glyphicon glyphicon-cd big-icon"></span>
-								</div>
-								<div>
-									<div class="program-list">
-										<ul>
-											<li>SketchUp</li>
-											<li>CAD Kuchnie</li>
-											<li>Fusion</li>
-											<li>Corel Draw</li>
-											<li>ArchiCAD</li>
-											<li>Artlantis</li>
-											<li>Vray</li>
-										</ul>
-									</div>
+				<div class="cv__section">
+					<div class="cv__section-title cv__section-title-2">INNE</div>
+					<div class="row cv__item-module">
+						<div class="col-md-4 col-xs-12">
+							<div class="other-stuff">
+								<div class="other-stuff__icon glyphicon glyphicon-cd"></div>
+								<div class="other-stuff__text">
+									<ul class="program-list">
+										<li>SketchUp</li>
+										<li>CAD Kuchnie</li>
+										<li>Fusion</li>
+										<li>Corel Draw</li>
+										<li>ArchiCAD</li>
+										<li>Artlantis</li>
+										<li>Vray</li>
+									</ul>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-8">
-						<div class="">
-							<div class="row other-stuff">
-								<div>
-									<span class="glyphicon glyphicon-bullhorn"></span>&nbsp;&nbsp; Język angielski - poziom zaawansowany
-								</div>
+						<div class="col-md-8 col-xs-12">
+							<div class="other-stuff">
+								<div class="other-stuff__icon glyphicon glyphicon-bullhorn"></div>
+								<div class="other-stuff__text">Język angielski - poziom zaawansowany</div>
 							</div>
-							</ br>
-							<div class="row other-stuff"> 
-								<div>
-									<span class="glyphicon glyphicon-road"></span>&nbsp;&nbsp; Kat. B. od 17.08.2009
-								</div>
+							<div class="other-stuff">
+								<div class="other-stuff__icon glyphicon glyphicon-road"></div>
+								<div class="other-stuff__text">Kat. B. od 17.08.2009</div>
 							</div>
-							</ br>
-							<div class="row other-stuff"> 
-								<div>
-									<span class="glyphicon glyphicon-heart"></span>&nbsp;&nbsp; Zainteresowania
-									<ul>
+							<div class="other-stuff">
+								<div class="other-stuff__icon glyphicon glyphicon-heart"></div>
+								<div class="other-stuff__text">Zainteresowania
+									<ul class="hobby-list">
 										<li>Sztuka nowoczesna</li>
 										<li>Podróżowanie</li>
 										<li>Wpływ sztuki na rozwój dziecka</li>
@@ -159,10 +141,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="klauzula cv__section">,,Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. z 2002r. Nr 101, poz. 926 ze zm.)."</div>
-				</div>
+				<div class="klauzula cv__section">"Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. z 2002r. Nr 101, poz. 926 ze zm.)."</div>
 				</div>
 			</div>
+		</div>
+		<div class="row project-row">
+			<a id="download-cv" class="btn-next-project">Pobierz CV w wersji PDF</a>
 		</div>
 	</section>
 	<!-- inject:footer:html -->
