Updating contact details

--- a/src/contact.html
+++ b/src/contact.html
@@ -14,9 +14,8 @@
 		<div class="row home-row about-text-row">
 			Czy można się ze mną skontaktować? Można!
 			<br/>Możemy rozmawiać o wnętrzach, meblach czy dinozaurach.
-			<br/><br/>Dzwoń lub pisz na : 
-			<br/>tel : 603599656
-			<br/>mail : agata.dudas@gmail.com
+			<br/><br/>Znajdź mnie na facebook'u lub pisz na :
+			<br/>mail : patelagata@gmail.com
 		</div>
 	</section>
 	<!-- inject:footer:html -->
