--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agata Patel - Architekt wnętrz</title>
-    <link rel="stylesheet" href="static/main.css" />
+    <link rel="stylesheet" href="static/main.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Pacifico|Montserrat" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="lazyload.min.js"></script>
+    <script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+    <script defer type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script defer src="lazyload.min.js"></script>
     <script defer src="script.js"></script>
 	<!-- endinject -->
 </head>
