--- a/cv/index.html
+++ b/cv/index.html
@@ -124,7 +124,7 @@
 								<span class="cv__icon glyphicon glyphicon-envelope"></span>
 							</div>
 							<div>
-								Kędzierzyn - Koźle
+								Warszawa
 								<span class="cv__icon glyphicon glyphicon-map-marker"></span>
 							</div>
 						</div>
