--- a/src/cv.html
+++ b/src/cv.html
@@ -34,7 +34,7 @@
 								<span class="cv__icon glyphicon glyphicon-envelope"></span>
 							</div>
 							<div>
-								Kędzierzyn - Koźle
+								Warszawa
 								<span class="cv__icon glyphicon glyphicon-map-marker"></span>
 							</div>
 						</div>
