Updated CV :computer:

--- a/cv/index.html
+++ b/cv/index.html
@@ -133,7 +133,17 @@
 				<div class="cv__section">
 					<div class="cv__section-title">DOŚWIADCZENIE</div>
 					<div class="row cv__item-module">
-						<div class="col-md-5 col-xs-12 date">01.2016 — obecnie</div>
+						<div class="col-md-5 col-xs-12 date">06.2017 — obecnie</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Halupczok Meble, Warszawa</div>
+							<div class="company-position">Technolog Produkcji</div>
+							<div class="">
+								Sporządzanie dokumentacji technicznej oraz pomoc przy projektowaniu. Komunikacja między projektantami a produkcją. Wyszukiwanie innowacyjnych rozwiązań związanych z produkcją i projektowiem mebli. Kontrolowanie procesów produkcyjnych oraz terminowości odbioru prac.
+							</div>
+						</div>
+					</div>
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">01.2016 — 05.2017</div>
 						<div class="col-md-7 col-xs-12 r">
 							<div class="company-name">Asberg Meble, Krapkowice</div>
 							<div class="company-position">Projektant</div>
