--- a/src/cv.html
+++ b/src/cv.html
@@ -43,7 +43,17 @@
 				<div class="cv__section">
 					<div class="cv__section-title">DOŚWIADCZENIE</div>
 					<div class="row cv__item-module">
-						<div class="col-md-5 col-xs-12 date">06.2017 — obecnie</div>
+						<div class="col-md-5 col-xs-12 date">11.2017 — obecne</div>
+						<div class="col-md-7 col-xs-12 r">
+							<div class="company-name">Goteborg Studio, Warszawa</div>
+							<div class="company-position">Architekt Wnętrz</div>
+							<div class="">
+								Projektowanie wnętrz, konsultacje wstępne, zakupy z pojektantem, usługi dekoratorskie, home makeover, nadzory autorskie, pomiary, prezentacje dla inwestorów.
+							</div>
+						</div>
+					</div>
+					<div class="row cv__item-module">
+						<div class="col-md-5 col-xs-12 date">06.2017 — 10.2017</div>
 						<div class="col-md-7 col-xs-12 r">
 							<div class="company-name">Halupczok Meble, Warszawa</div>
 							<div class="company-position">Technolog Produkcji</div>
@@ -138,15 +148,17 @@
 							</div>
 							<div class="other-stuff">
 								<div class="other-stuff__icon glyphicon glyphicon-heart"></div>
-								<div class="other-stuff__text">Zainteresowania
-									<ul class="hobby-list">
-										<li>Sztuka nowoczesna</li>
-										<li>Podróżowanie</li>
-										<li>Wpływ sztuki na rozwój dziecka</li>
-										<li>Rzeźba w glinie</li>
-										<li>Nowinki techniczne</li>
-									</ul>
-								</div>
+								<div class="other-stuff__text">Skills
+										<ul class="hobby-list">
+											<li>Pomiar i dokumentacja wnętrz</li>
+											<li>Projektowanie graficzne 2D</li>
+											<li>Projektowanie 3D</li>
+											<li>Wizualizacje projektowanych pomieszczeń</li>
+											<li>Sporządzenie  dokumentacji wykonawczej</li>
+											<li>Umiejętność nadzorowania pracy wykonawców</li>
+											<li>Komunikatywność</li>
+										</ul>
+									</div>
 							</div>
 						</div>
 					</div>
