--- a/src/projects.html
+++ b/src/projects.html
@@ -61,7 +61,7 @@
 			</ul>
         </div>
 		<div class="row project-row">
-			<a class="btn-next-project" href="/portfolio">Zobacz realizacje → </a>
+			<a class="btn-next-project" href="/realizacje">Zobacz realizacje → </a>
 		</div>
 	</section>
 	<!-- inject:footer:html -->
