--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div id="nav-links-wrap" class="col-md-9 col-sm-9 nav-links-wrap">
             <ul class="nav-links">
-                <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+                <li><a id="portfolio-link" href="/realizacje">realizacje</a></li>
                 <li><a id="projects-link" href="/projects">projekty</a></li>
                 <li><a id="cv-link" href="/cv">cv</a></li>
                 <li><a id="contact-link" href="/contact">kontakt</a></li>
@@ -98,7 +98,7 @@
 	<!-- endinject -->
     <section id="home" class="ha-waypoint main-section home" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
 		<div class="row home-row photo-row">
-			<img class="my-photo" src="static/img/agata_patel_about.png" alt="">
+			<img class="my-photo" src="static/img/agata_patel-about.jpg" alt="">
 		</div>
 		<div class="row home-row about-text-row">
 			Absolwentka Architektury Wnętrz. 
@@ -189,7 +189,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="foot-links">
-                    <li><a href="/portfolio">portfolio</a></li>
+                    <li><a href="/realizacje">realizacje</a></li>
                     <li><a href="/projects">projekty</a></li>
                     <li><a href="/cv">cv</a></li>
                     <li><a href="/contact">kontakt</a></li>
