--- a/projects/krzeslo/index.html
+++ b/projects/krzeslo/index.html
@@ -40,7 +40,7 @@
         </div>
         <div id="nav-links-wrap" class="col-md-9 col-sm-9 nav-links-wrap">
             <ul class="nav-links">
-                <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+                <li><a id="portfolio-link" href="/realizacje">realizacje</a></li>
                 <li><a id="projects-link" href="/projects">projekty</a></li>
                 <li><a id="cv-link" href="/cv">cv</a></li>
                 <li><a id="contact-link" href="/contact">kontakt</a></li>
@@ -81,7 +81,7 @@
         </svg>
     </div>
     <ul class="nav-links">
-        <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+        <li><a id="portfolio-link" href="/realizacje">realizacje</a></li>
         <li><a id="projects-link" href="/projects">projekty</a></li>
         <li><a id="cv-link" href="/cv">cv</a></li>
         <li><a id="contact-link" href="/contact">kontakt</a></li>
@@ -196,7 +196,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="foot-links">
-                    <li><a href="/portfolio">portfolio</a></li>
+                    <li><a href="/realizacje">realizacje</a></li>
                     <li><a href="/projects">projekty</a></li>
                     <li><a href="/cv">cv</a></li>
                     <li><a href="/contact">kontakt</a></li>
