Change front image

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<!-- endinject -->
     <section id="home" class="ha-waypoint main-section home" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
 		<div class="row home-row photo-row">
-			<img class="my-photo" src="static/img/agata_patel_about.png" alt="">
+			<img class="my-photo" src="static/img/agata_patel.jpg" alt="">
 		</div>
 		<div class="row home-row about-text-row">
 			Absolwentka Architektury Wnętrz. 
