--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<!-- endinject -->
     <section id="home" class="ha-waypoint main-section home" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
 		<div class="row home-row photo-row">
-			<img class="my-photo" src="static/img/agata_patel-about.jpg" alt="">
+			<img class="my-photo" src="static/img/agata_patel.jpg" alt="">
 		</div>
 		<div class="row home-row about-text-row">
 			Absolwentka Architektury Wnętrz. 
