Introduce new projects 👩‍🎨

--- a/projects/index.html
+++ b/projects/index.html
@@ -104,37 +104,37 @@
 		<div class="row portfolio-row projects-row-1">
             <ul id="categories" class="clr">
 				<li>
-					<a href="./dom">
-						<img src="../static/img/biuro-main.png" alt=""/>
-						<h1>Dom</h1>
+					<a>
+						<img src="../static/img/salon_kapielowy/salon_kapielowy_thumb.jpg" alt=""/>
+						<h1>Salon Kąpielowy</h1>
 						<p></p>
 					</a>
 				</li>
 				<li>
-					<a href="./kuchnia-1">
-						<img src="../static/img/kuchnia-1.png" alt=""/>
-						<h1>Kuchnia</h1>
+					<a>
+						<img src="../static/img/sypialnia/sypialnia_thumb.jpg" alt=""/>
+						<h1>Sypialnia</h1>
 						<p></p>
 					</a>
 				</li>
 				<li>
-					<a href="./kuchnia-2">
-						<img src="../static/img/kuchnia-2.png" alt=""/>
-						<h1>Kuchnia</h1>
+					<a>
+						<img src="../static/img/tapeta/makeover.jpg" alt=""/>
+						<h1>Makeover</h1>
 						<p></p>
 					</a>
 				</li>
 				<li>
-					<a href="./kuchnia-3">
-						<img src="../static/img/kuchnia-3.png" alt=""/>
-						<h1>Kuchnia</h1>
+					<a>
+						<img src="../static/img/lazienka/lazienka_10m2.jpg" alt=""/>
+						<h1>Łazienka 10m2</h1>
 						<p></p>
 					</a>
 				</li>
 				<li>
-					<a href="./kuchnia-4">
-						<img src="../static/img/kuchnia-4.png" alt=""/>
-						<h1>Kuchnia</h1>
+					<a>
+						<img src="../static/img/salon_skandynawski/salon.jpg" alt=""/>
+						<h1>Salon skandynawski</h1>
 						<p></p>
 					</a>
 				</li>
