--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 			<img class="my-photo" src="static/img/agata_patel.jpg" alt="">
 		</div>
 		<div class="row home-row about-text-row">
-			Absolwentka Architektury Wnętrz. 
-			Pragnąca rozwijać się w temacie designu i grafiki. Wielbicielka sztuki. Zafascynowana rozwojem techniki. Nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Wielbicielka eksperymentów kulinarnych. Lubi nowe wyzwania i pracę zespołową.
+			Absolwentka Architektury Wnętrz. W projektowaniu ceni sobie funkcję i ergonomię. Każdy tworzony przez nią projekt jest indywidualny. Techniczne spojrzenie na projekt w połączeniu z artystyczną duszą to jej klucz do sukcesu. 
+			Agata to nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Lubi nowe wyzwania i pracę zespołową.
 		</div>
 	</section>
 	<!-- inject:footer:html -->
