Add link to partners and remove form

--- a/index.html
+++ b/index.html
@@ -445,30 +445,12 @@
           <div class="row">
               <!-- contact form -->
               <div class="col-lg-8 text-left">
-                <h3 class="secondry-title">Napisz do nas</h3>
-                <form class="contact-form top_60" method="POST" action="mail.php">
-                    <div class="row">
-                        <!--Name-->
-                        <div class="col-md-6">
-                            <input id="con_name" name="con_name" class="form-inp" type="text" placeholder="Imię">
-                        </div>
-                        <!--Email-->
-                        <div class="col-md-6">
-                            <input id="con_email" name="con_email" class="form-inp" type="text" placeholder="Email">
-                        </div>
-                        <div class="col-md-12">
-                            <!--Message-->
-                            <textarea name="con_message" id="con_message" placeholder="Napisz swoją wiadomość" rows="7"></textarea>
-                            <button id="con_submit" class="site-btn top_45 pull-right" type="submit">Wyślij</button>
-                        </div>
-                    </div>
-                </form>
               </div>
               <!-- contact info -->
               <div class="col-lg-3 offset-lg-1 contact-info">
                 <p>ul. Radzyminska 230
                   03-674, Warszawa</p>
-                  <p>fancy.design.biuro@gmail.com<br>
+                  <p>fancydesign.biuro@gmail.com<br>
                     +48 570 686 169</p>
                 <div class="social">
                     <a href="https://www.facebook.com/FancyDesignWarsaw"><i class="fab fa-facebook"></i>  </a>
@@ -477,11 +459,35 @@
               </div>
               <!-- Contact Map -->
               <div class="contact-map top_90">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78192.31974032277!2d20.9626399236576!3d52.23411977451976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ece9a654cef6b%3A0x8bab5026283b0299!2sTarg%C3%B3wek%2C%2000-001%20Warsaw!5e0!3m2!1sen!2spl!4v1577370648142!5m2!1sen!2spl" height="450" style="border:0;" allowfullscreen=""></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2440.748156394851!2d21.07169251568772!3d52.284273979770205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ece8efdee57a3%3A0x67486c0148c8e07c!2sRadzymi%C5%84ska%20230%2C%2003-689%20Warszawa!5e0!3m2!1sen!2spl!4v1583699267397!5m2!1sen!2spl" height="450" style="border:0;" allowfullscreen=""></iframe>
               </div>
           </div><!-- row end -->
     </div><!-- container end -->
   </div> <!-- section inner end -->
+</section>
+
+<!-- PARTNERS -->
+<section id="blog" class="primary-bg align-left">
+  <div class="section-inner">
+    <div class="container">
+      <h2 class="section-title bottom_45">Partnerzy</h2>
+      <div class="row">
+        <a href="https://internityhome.pl/" target="_blank" class="partner--link">
+          <div class="partners--img partners--img-1"></div>
+        </a>
+        <a href="https://dekorianhome.pl/" target="_blank" class="partner--link">
+          <div class="partners--img partners--img-2"></div>
+        </a>
+        <a href="http://espiroproperty.pl/pl/" target="_blank" class="partner--link">
+          <div class="partners--img partners--img-3"></div>
+        </a>
+        <a href="http://techbud-r1.pl/" target="_blank" class="partner--link">
+          <div class="partners--img partners--img-4"></div>
+        </a>
+        </div>
+      </a>
+    </div>
+  </div>
 </section>
 
 
