--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <div class="container">
         <h2 class="section-title bottom_45">Blog</h2>
         <div class="row">
-          <h5>Juz w krótce artykuły na naszym blogu...</h5>
+          <h5>Już w krótce artykuły na naszym blogu...</h5>
         </div>
         <div class="row el--hidden">
           <!-- A news -->
