--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Fancy Design - Projektowanie wnętrz Warszawa</title>
 <meta charset="UTF-8">
 <meta name="description" content="Fancy Design - Projektowanie wnętrz Warszawa">
-<meta name="keywords" content="Projektowanie wnętrz, architekt wnętrz, architekt wnętrz warszawa, ile kosztuje projekt wnętrz">
+<meta name="keywords" content="Projektowanie wnętrz, architekt wnętrz, architekt wnętrz warszawa, ile kosztuje projekt wnętrz, projekt wnętrz warszawa">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
