set carousel timeout

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <!-- Services -->
     <div class="col-lg-12 text-left bottom_90">
-        <div class="owl-carousel owl-theme services" data-autoplay="true" data-items-desktop="3" data-items-desktop-small="2" data-items-tablet="2" data-items-tablet-small="1">
+        <div class="owl-carousel owl-theme services" data-autoplay="true" data-autoplaytimeout="20000" data-items-desktop="3" data-items-desktop-small="2" data-items-tablet="2" data-items-tablet-small="1">
           <!-- a service -->
             <div class="item">
               <div class="left">
