--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <li><a href="#projekty">Projekty</a></li>
       <li><a href="#blog">Blog</a></li>
       <li><a href="#kontakt">Kontakt</a></li>
+      <li class="menubar-phone">+48 570 686 169</li>
     </ul>
   </nav>
 </header>
@@ -81,6 +82,7 @@
       <li><a href="#projekty">Projekty</a></li>
       <li><a href="#blog">Blog</a></li>
       <li><a href="#kontakt">Kontakt</a></li>
+      <li class="menubar-phone-black">+48 570 686 169</li>
     </ul>
   </nav>
 </header>
@@ -122,6 +124,49 @@
   <div class="section-inner">
   <div class="container">
     <h2 class="section-title bottom_45">O nas</h2>
+    <div class="xd-elements">
+      <div class="col-md-4 xd-element">
+        <a
+          class="xd-element-content"
+          href="http://www.domo.com.pl/"
+          target="_blank"
+        >
+          <img src="img/main/icon-project.svg" alt="">
+          <h2>
+            Projekty domów,
+            <br>
+            adaptacja i formalności
+          </h2>
+        </div>
+      </a>
+      <a
+        class="col-md-4 xd-element"
+        href="http://espiroproperty.pl/pl/nasze-marki/espiro-property/"
+        target="_blank"
+      >
+        <div class="xd-element-content">
+          <img src="img/main/icon-tools.svg" alt="">
+          <h2>
+            Budowa domu - stan
+            <br>
+            surowy, stan deweloperski
+          </h2>
+        </div>
+      </a>
+      <a
+        class="col-md-4 xd-element"
+        href="#kontakt"
+      >
+        <div class="xd-element-content">
+          <img src="img/main/icon-brush.svg" alt="">
+          <h2>
+            Projektowanie
+            <br>
+            i wykończenie wnętrz
+          </h2>
+        </div>
+      </a>
+    </div>
     <p>
       Pracownia architektury wnętrz Fancy Design to miejsce, w którym z pasją tworzymy Wasze wymarzone wnętrza. Każdy projekt jest traktowany indywidualnie. Naszym celem jest stworzenie idealnej przestrzeni szytej na miarę Inwestora.
       Przemyślane rozwiązania techniczne, dobrej jakości materiały oraz funkcjonalność i ergonomia, a to wszystko w Twoim budżecie… Zapraszamy do współpracy.
@@ -195,6 +240,24 @@
         </div>
       </div> <!-- Testimonial end -->
     </div> <!-- container end -->
+
+    <div class="container collab-services">
+      <h2 class="section-title bottom_45">Kompleksowa realizacja</h2>
+      <p>
+        We współpracy z marką Espiro Property i DOMO oferujemy naszym klientom kompleksową usługę w zakresie:
+        <ul class="collab-services-list">
+          <li>kupna gotowego projektu domu,</li>
+          <li>adaptacji projektu,</li>
+          <li>indywidualnego projektu budowlanego budynku jedno lub wielorodzinnego,</li>
+          <li>formalności prawnych związanych z pozwoleniem na budowę,</li>
+          <li>realizacji stanu surowego,</li>
+          <li>realizacji stanu deweloperskiego,</li>
+          <li>indywidualnego projektu wnętrz,</li>
+          <li>realizacji wykończenia wnętrz z nadzorem autorskim i koordynacją prac</li>
+          <li>realizacji wykończenia wnętrz pod klucz</li>
+        </ul>
+      </p>
+    </div>
   </div>
     <!-- diagonal svg -->
     <div class="diagonals">
